--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -340,11 +340,10 @@
 
  @misc{imitator,
   	author =	{{IMITATOR Team}},
-  	number =	{v2.6},
+  	number =	{v2.7},
   	title =	{{IMITATOR Web page}},
-  	url =	{http://www.lsv.ens-cachan.fr/Software/imitator/},
-  	year =	{2013},
-  	lipn-category = "real",
+  	url =	{http://www.imitator.fr},
+  	year =	{2015},
 }
 
 
