--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -369,6 +369,21 @@
 }
 
 
+@article{LPY97,
+	author    = {Kim Guldstrand Larsen and
+				Paul Pettersson and
+				Wang Yi},
+	title     = {{UPPAAL} in a Nutshell},
+	journal   = {International Journal on Software Tools for Technology Transfer},
+	volume    = {1},
+	number    = {1-2},
+	year      = {1997},
+	pages     = {134-152},
+	ee        = {http://dx.doi.org/10.1007/s100090050010},
+	bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
 
 @inproceedings{Markey11,
   	address =	{V{\"a}ster{\aa}s, Sweden},
