User manual: contributors

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2102,15 +2102,34 @@ Camille~Coti, Sami~Evangelista and Nguyen~Hoang~Gia worked on the distributed ve
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\subsection*{\imitator{} license}
 \imitator{} is available under the GNU GPL license.
 
 \begin{center}
 	\includegraphics[width=.3\textwidth]{images/GPLv3_Logo.png}
 \end{center}
 
+\bigskip
+
+\subsection*{Contributors}
+The following people contributed to the development of \imitator{}.
+
+
+\begin{tabular}{l l @{ } c @{ } l}
+	Étienne André & 2008 & -- & \\
+	Camille Coti & 2014 & -- & \\
+	Daphne Dussaud & 2010 & & \\
+	Sami Evangelista & 2014 & & \\
+	Ulrich Kühne & 2010 & -- & 2011 \\
+	Nguyen Hoang Gia & 2014 & -- & \\
+	Romain Soulat & 2010 & -- & 2013 \\
+\end{tabular}
+
+
 
 \bigskip
 
+\subsection*{User Manual}
 This user manual is available under the Creative Commons CC-BY-SA license.
 
 \begin{center}
@@ -2119,10 +2138,10 @@ This user manual is available under the Creative Commons CC-BY-SA license.
 
 \bigskip
 
-\paragraphe{Credits}
+\subsection*{Credits}
 \imitator{}'s logo comes from KaterBegemot's \stylePath{Typing monkey.svg} (Licence: Creative Commons Attribution-Share Alike 3.0 Unported).
-	% TODO: license of tool, this document, etc.
 
+\url{https://commons.wikimedia.org/wiki/File:Typing_monkey.svg}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
